# thermalplumestage

./: LICENSE  PROJECT_REPORT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.pgf/: DESIGN-ThermalPlumeStage.md  VERIFY-ThermalPlumeStage.md  status-ThermalPlumeStage.json
examples/: current_forecast.json  discharge_specs.json  ecology_thresholds.json  thermalplume_report.json  thermalplume_report.md
src/thermalplumestage/: __init__.py  adapters.py  cli.py  models.py  planner.py  report.py  validate.py
tests/: test_cli.py  test_planner.py
